# picow-hub75-clock

./: .gitignore  CLAUDE.md  CMakeLists.txt  Netlist_Control_Panel_8_-_controller_-_picow_-_3_2026-06-12.enet  Netlist_clock-picow-hub75-ldr_2026-06-12.enet  README.md  pico_sdk_import.cmake
include/: board_clock.h  board_control_panel.h  config.h  lwipopts.h
src/: control.h  font.h  font_large.h  hub75.c  hub75.h  hub75.pio  icons.h  ldr.c  ldr.h  main.c  mqtt.c  mqtt.h  ntp.c  ntp.h  weather.c  weather.h  webserver.c  webserver.h
tools/: clock_control.py  genfont.py
